--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <div id="know">
         <p>when we're old enough to remember the stars...</p>
     </div>
-    <img src="home.jpg" height=500px alt="an empty studio">
+    <img src="home.jpg" height=500px width=1420px alt="an empty studio">
     <div id="stars">
       <p>will they want to know us?</p>
     </div>
@@ -21,9 +21,7 @@
   <div id="move">
     <a href="itssolovelyout.html">go back to sleep?</a>
   </div>
-  <center>
-    <a href="wakeup.html">WAKE UP</a>
-  </center>
+  
 
   </body>
 
