--- a/home2.html
+++ b/home2.html
@@ -6,12 +6,17 @@
   <body>
       <video autoplay muted loop src="clouds.mp4" id="clouds"></video>
      <center>
+     <div id="lost">
+        <a href="ruined.html">continue onwards</a>
+     </div>
      <div id="content">
        <p>oh dear, you seem to be a bit lost</p>
     </div>
-    <div id="lost">
-      <a href="lost.html">was this the right way?</a>
+    <center>
+      <div id="wake">
+      <a href="wakeup.html">wake up?</a>
     </div>
+    </center>
   </center>
   </body>
 
