--- a/WAKEUP.html
+++ b/WAKEUP.html
@@ -11,6 +11,6 @@
         <p>it seems as if you're not ready for this action...</p>
         <p>perhaps try another time</p>
     </div>
-          <a href="index.html">it's okay to go back</a>
+          <a href="index2.html">it's okay to go back</a>
 
       <TITLE>PAGE NOT FOUND</TITLE>
