--- a/home2.html
+++ b/home2.html
@@ -14,7 +14,7 @@
     </div>
     <center>
       <div id="wake">
-      <a href="wakeup.html">wake up?</a>
+      <a href="WAKEUP.html">wake up?</a>
     </div>
     </center>
   </center>
