--- a/more.html
+++ b/more.html
@@ -1,7 +1,18 @@
 <html>
   <head>
     <link rel="stylesheet" href="more.css"
-
   </head>
+
   <body>
-    <p>this is not for you.</p>
+    <center>
+      <video autoplay muted loop src="whitenoise.mp4" id="glitch"></video>
+      <div id="content">
+        <p>Changes in lunar behavior cause people to lose touch with reality,</p>
+        <p>and it becomes more difficult to blame our problems on monsters.</p>
+      </div>
+    </center>
+
+  </body>
+
+  <TITLE>more?</TITLE>
+  </html>
