--- a/WAKEUP.html
+++ b/WAKEUP.html
@@ -13,4 +13,10 @@
     </div>
           <a href="index2.html">it's okay to go back</a>
 
+      <p hidden> I do hope that someone is seeing these thoughts
+      I know two of you that will most likely inspect every page.
+      Either way it's a bit calming to just be speaking into the void,
+      ot knowing if anyone will ever see my words. </p>
+
+
       <TITLE>PAGE NOT FOUND</TITLE>
