--- a/go.html
+++ b/go.html
@@ -5,23 +5,32 @@
 
   <body>
     <div id="move">
-      <p>its hard when you try to go back, isn't it?</p>
+      <p>its hard when you try to go <ins>back</ins>, isn't it?</p>
     </div>
     <div id="try">
       <p>memories get harder. the more you try to recall, the more that gets forgotten with time</p>
     </div>
     <a href="more.html">all we can do is force ourselves to push forward as the past is erased
-      over, and over, and over, and over, and over, and over, and over, and over, and over, and over, and over, and over,
+      <ins>over, and over, and over, and over, and over, and over, and over, and over, and over, and over, and over, and over,
       and over, and over, and over, and over, over, and over, and over, and over, and over, and over, and over, and over, and over, and over, and over, and over,
       and over, and over, and over, and over, over, and over, and over, and over, and over, and over, and over, and over, and over, and over, and over, and over,
       and over, and over, and over, and over,over, and over, and over, and over, and over, and over, and over, and over, and over, and over, and over, and over,
       and over, and over, and over, and over, over, and over, and over, and over, and over, and over, and over, and over, and over, and over, and over, and over,
       and over, and over, and over, and over</a>
       <div id="stars">
-        <p>go outside. shut the door.</p>
+        <p>go outside. <b>shut the door.</b></p>
       </div>
       <div id="oh">
         <p>try to make sense of the fragments of conversation you hear in the street</p>
       </div>
     <video autoplay muted loop src="time.mp4" id="glitch"></video>
     <TITLE>it's hard for all of us</TITLE>
+
+
+    <p hidden> Have you ever gone to a second-hand store and
+    they have a big box of old photos from who knows where and
+    who knows who took them? It's the strangest experience to go
+    through them for hours. You start to recognize these people
+    you've never known, see snippet of their lives. After a while
+    you'll get a headache. Whether that's from the concentration
+    or meeting all these new people, either way you feel groggy.</p>
