--- a/home2.html
+++ b/home2.html
@@ -16,8 +16,17 @@
       <div id="wake">
       <a href="WAKEUP.html">wake up?</a>
     </div>
+    <div id="explore">
+      <p>it's okay to be frightened</p>
+    </div>
     </center>
   </center>
+
+  <p hidden> Imagine that I'm playing a very calming acoustic guitar. I have an old video of an ex
+  playing guitar while staring into the clouds. We weren't good for each other but moments like that made me wish
+  that we were.</p>
+
+
   </body>
 <TITLE>thats not right...</TITLE>
 </html>
