--- a/more.html
+++ b/more.html
@@ -9,7 +9,10 @@
         <p>Changes in lunar behavior cause people to lose touch with reality,</p>
         <p>and it becomes more difficult to blame our problems on monsters.</p>
       </div>
-    </center>
+      <div id="memories">
+        <a href="memories.html">...are you sure you want to remember?</a>
+      </div>
+      <center>
 
   </body>
 
