--- a/ohhello.html
+++ b/ohhello.html
@@ -24,6 +24,11 @@
     <a href="video.html">what's this?</a>
   </div>
 
+  <div id="explore">
+    <p>are you sure of your own senses?</p>
+  </div>
+
+  <p hidden> nothing to see here... </p>
 
   </body>
 
