--- a/video.html
+++ b/video.html
@@ -9,9 +9,16 @@
       <div id="content">
         <p>CAN'T GO BACK NOW</p>
       </div>
-    </center>
-
+    <div id="secret">
+    <a href="no.html">...</a>
+    </div>
+  </center>
   </body>
+<div id="mads">
+<p><a href=mads.html>
+<img src="mads.png" width="50" height="100">
+</a></p>
+</div>
 
   <TITLE>end of the line</TITLE>
   </html>
