--- a/itssolovelyout.html
+++ b/itssolovelyout.html
@@ -6,7 +6,15 @@
   <body>
       <p>but it's so lovely out</p>
       <div id="dif">
-      <a href="index.html">here you are</a>
+          <a href="index.html">here you are</a>
       </div>
+      <div id="here">
+          <a href="index2.html">lets go back</a>
+      </div>
+      <div id="fix">
+          <a href="home2.html">oh, this is new</a>
+      </div>
+      <p hidden> How many constellations do you know? I used to know quite a few,
+        I learned them again to impress a boy and then forgot them when he forgot me. </p>
 
-      <a href="home2.html">oh, this is new</a>
+      <TITLE>how many can you count?</TITLE>
