--- a/index.html
+++ b/index.html
@@ -15,13 +15,19 @@
       <p>will they want to know us?</p>
     </div>
       <p>we cannot afford them</p>
+      <div id="explore">
+        <p>you never know what you'll find if you snoop around...</p>
+      </div>
 
+      <p hidden> Look at you, smart cookie. Well now that
+        I've rewarded you you'll continue to do it. Fuck.
+        Forget that you saw this.  </p>
 
     <a href="ohhello.html">going out?</a>
   <div id="move">
     <a href="itssolovelyout.html">go back to sleep?</a>
   </div>
-  
+
 
   </body>
 
