--- a/mads.html
+++ b/mads.html
@@ -20,4 +20,6 @@ They just know how to make a great piece, it comes
 naturally for them. Just A1 work. Will forever
 love what they make. </p>
 
+<TITLE>Mads Reardon</TITLE>
+
   <center>
