--- a/more.html
+++ b/more.html
@@ -6,7 +6,7 @@
     <center>
       <video autoplay muted loop src="whitenoise.mp4" id="glitch"></video>
       <div id="content">
-        <p>Changes in lunar behavior cause people to lose touch with reality,</p>
+        <p>Changes in lunar behavior cause people to <a href="lunar"><i>lose touch with reality</i></a></p>
         <p>and it becomes more difficult to blame our problems on monsters.</p>
       </div>
       <div id="memories">
