--- a/no.html
+++ b/no.html
@@ -11,11 +11,13 @@
         <p>There isn’t always another page, don't you understand that?
         <b>You are not in control.</b> <em>This is not for you.</em> You aren't even supposed to be here
           and yet you think that there must be more. There has to be more. Of course there is more,
-          just a bit more searching, a little more looking, some sort of <ins>link</ins> to the next page. Something to gain.
-          Something to learn. Something to find out about yourself. <del> Fuck you.</del> You know nothing of this and yet
+          just a bit more <a href="https://ubu.com/">searching</a>, a little more looking,
+          some sort of <ins>link</ins> to the next page. Something to <a href="https://www.healthline.com/nutrition/how-to-gain-weight">gain</a>.
+          Something to learn. Something to find out about
+          yourself. <del> Fuck you.</del> You know nothing of this and yet
           you continue to search. I can see you clicking around, moving your mouse. You think I don’t see you?
            You really cannot grasp that there isn’t more going down this route. Perhaps that’s something <em>you</em>
-           should explore about <em>yourself</em>. Ever think about that? This is not my issue, I know everything there
+           should <a href="https://sunset-travel.com/">explore</a> about <em>yourself</em>. Ever think about that? This is not my issue, I know everything there
            is in this and yet you question me? <b> How arrogant of you.</b> To see a page that says you cannot go back
            and thus you push forward. Interesting test, is it not? Perhaps you will go back to the start and search
            more. What are you looking for? Really? Do you expect the secrets of the world to drop in your lap? </p>
@@ -28,7 +30,6 @@
              <br>
              I do not have the time to be making you feel better about life, to give you relief.
              This is <b><em>your</em></b> fault. I told you no and you continued. Don’t blame me now that you’re stuck</p>
-
 
 
             <p hidden>Yeah okay fucker, nice job you know how to ctrl right click.
