--- a/go.html
+++ b/go.html
@@ -5,11 +5,12 @@
 
   <body>
     <div id="move">
-      <p>its hard when you try to go <ins>back</ins>, isn't it?</p>
+      <p>its hard when you try to go <a href="index.html"><ins>back</ins></a>, isn't it?</p>
     </div>
     <div id="try">
       <p>memories get harder. the more you try to recall, the more that gets forgotten with time</p>
     </div>
+    <div id="more">
     <a href="more.html">all we can do is force ourselves to push forward as the past is erased
       <ins>over, and over, and over, and over, and over, and over, and over, and over, and over, and over, and over, and over,
       and over, and over, and over, and over, over, and over, and over, and over, and over, and over, and over, and over, and over, and over, and over, and over,
@@ -17,6 +18,7 @@
       and over, and over, and over, and over,over, and over, and over, and over, and over, and over, and over, and over, and over, and over, and over, and over,
       and over, and over, and over, and over, over, and over, and over, and over, and over, and over, and over, and over, and over, and over, and over, and over,
       and over, and over, and over, and over</a>
+    </div>
       <div id="stars">
         <p>go outside. <b>shut the door.</b></p>
       </div>
