--- a/ohhello.html
+++ b/ohhello.html
@@ -28,7 +28,11 @@
     <p>are you sure of your own senses?</p>
   </div>
 
-  <p hidden> nothing to see here... </p>
+  <p hidden> *mocking tone* Oh I'm just
+   going to go inspect the page instead of
+   clicking around and exploring because I don't
+   want to miss anything...*cough cough* BRENDAN and SASHA.
+  </p>
 
   </body>
 
