--- a/ohhello.html
+++ b/ohhello.html
@@ -31,7 +31,7 @@
   <p hidden> *mocking tone* Oh I'm just
    going to go inspect the page instead of
    clicking around and exploring because I don't
-   want to miss anything...*cough cough* BRENDAN and SASHA.
+   want to miss anything...*cough cough* BRENDAN.
   </p>
 
   </body>
