--- a/video.html
+++ b/video.html
@@ -4,21 +4,32 @@
 
   </head>
   <body>
-    <center>
-      <video autoplay muted loop src="glitch.mp4" id="glitch"></video>
-      <div id="content">
-        <p>CAN'T GO BACK NOW</p>
-      </div>
-    <div id="secret">
-    <a href="no.html">...</a>
-    </div>
-  </center>
-  </body>
-<div id="mads">
-<p><a href=mads.html>
-<img src="mads.png" width="50" height="100">
-</a></p>
-</div>
+  <center>
+      <p>Oh, how'd you get here?
+        <br>
+        <br>
+      Well, that's alright. You're here now and I guess that's all that matters.
+        <br>
+      although I'm not sure if you can move forward from here...
+        <br>
+      It's okay to go <ins><a href="index.html">back</a></ins>
+      sometimes as long as you don't stay there for too long.
+        <br>
+      Thing's don't have to be <b><a href="https://www.thesaurus.com/browse/familiar" target="blank">familiar</a></b> to be safe.
+        <br>
+        <br>
+      The Sky is orange and you're thinking of <i>them</i>, aren't you?
+        <br>
+      It really is okay to be <b><a href="https://en.wikipedia.org/wiki/The_Thinker" target="blank">lost in thought</a></b>, just remember to
+      find your way back soon enough,
+        <br>
+      alright?
 
-  <TITLE>end of the line</TITLE>
+    </p>
+ </center>
+ <p hidden> Imagine that I'm playing a very calming acoustic guitar. I have an old video of an ex
+ playing guitar while staring into the clouds. We weren't good for each other but moments like that made me wish
+ that we were.</p>
+
+  <TITLE>think you want to go back</TITLE>
   </html>
