--- a/index.html
+++ b/index.html
@@ -21,13 +21,17 @@
 
       <p hidden> Look at you, smart cookie. Well now that
         I've rewarded you you'll continue to do it. Fuck.
-        Forget that you saw this.  </p>
+        Forget that you saw this. </p>
 
     <a href="ohhello.html">going out?</a>
   <div id="move">
     <a href="itssolovelyout.html">go back to sleep?</a>
   </div>
 
+<center>
+  <div id="intro">
+  <a href="intro.html"><b>INTRODUCTION</b></a>
+</div>
 
   </body>
 
