--- a/intro.html
+++ b/intro.html
@@ -68,3 +68,5 @@
       <div id="credit"
       <br>
       <p> <a href="index.html"> <b> care to continue onwards? </b> </a> </p>
+
+<TITLE>introduction</TITLE>
