--- a/new_project/WAKEUP.html
+++ b/new_project/WAKEUP.html
@@ -6,15 +6,13 @@
   <body>
     <center>
     <div id="stars">
-        <p><b>404</b>
-          <br>
-        <b>ERROR</b></p>
-      <div id="stars">
-        <p>it seems as if you're not ready for this action...
-          <br>
-        perhaps try another time</p>
+      <img src="error.png" height=400 width=800>
     </div>
-          <a href="index2.html">it's okay now</a>
+          <a href="index2.html"><button>...</button></a>
+
+    <p> It seems as if you are not ready for this action
+      <br>
+      Please try again later</p>
 
       <p hidden> I do hope that someone is seeing these thoughts
       I know two of you that will most likely inspect every page.
@@ -22,4 +20,4 @@
       not knowing if anyone will ever see my words. </p>
 
 
-      <TITLE>PAGE NOT FOUND</TITLE>
+      <TITLE>oh dear...</TITLE>
