--- a/new_project/index.html
+++ b/new_project/index.html
@@ -28,6 +28,10 @@
     <a href="itssolovelyout.html">go back to sleep?</a>
   </div>
 
+<center>
+  <div id="intro">
+  <a href="intro.html"><b>INTRODUCTION</b></a>
+</div>
 
   </body>
 
