--- a/WAKEUP.html
+++ b/WAKEUP.html
@@ -5,18 +5,19 @@
   </head>
   <body>
     <center>
-        <h1>404</h1>
-        <p>ERROR</p>
-      <div id="stars">
-        <p>it seems as if you're not ready for this action...</p>
-        <p>perhaps try another time</p>
+    <div id="stars">
+      <img src="error.png" height=400 width=800>
     </div>
-          <a href="index2.html">it's okay to go back</a>
+          <a href="index2.html"><button>...</button></a>
+
+    <p> It seems as if you are not ready for this action
+      <br>
+      Please try again later</p>
 
       <p hidden> I do hope that someone is seeing these thoughts
       I know two of you that will most likely inspect every page.
       Either way it's a bit calming to just be speaking into the void,
-      ot knowing if anyone will ever see my words. </p>
+      not knowing if anyone will ever see my words. </p>
 
 
-      <TITLE>PAGE NOT FOUND</TITLE>
+      <TITLE>oh dear...</TITLE>
