--- a/new_project/intro.html
+++ b/new_project/intro.html
@@ -21,24 +21,21 @@
           as remembering that you are a person.
           <br>
           (as pretentious as that sounds)
-            <br>
-            Keeping that in mind, there may be a few instances
-            <br>
-            in which you become overwhelmed.
-            <br>
-            <br>
-            This experience is not meant to
-            frighten, it is
-            <br>
-          a dive  into the struggle I have and you may
-          also;
           <br>
-           to <b>stay present and continually grow.</b>
+          <br>
+          This experience is meant to be a dive
+          <br>
+        into the struggle I have and you may
+        also;
+        <br>
+         to <b>stay present and continually grow.</b>
+          <br>
+          <br>
+            The website is best experienced full screen with showing tool bar and
+            bookmarks as to have the pages format correctly
             <br>
             <br>
-            If the time comes in which you feel overwhelmed,
-            <br>
-            I urge you to simply close out, no
+             No
             progress can be
             <br>
             made when things feel like
@@ -61,7 +58,7 @@
       </div>
 
       <div id="smile">
-    <img src="plant.jpg" height=600px width=900px alt="a smiley stress ball on a backward canvas">
+    <img src="plant.jpg" height=600px width=900px alt="a plant growing through a cinder block">
       </div>
 
 <center>
