--- a/new_project/more.html
+++ b/new_project/more.html
@@ -10,7 +10,7 @@
         <p>and it becomes more difficult to blame our problems on monsters</p>
       </div>
       <div id="memories">
-        <a href="memories.html">...are you sure you want to remember?</a>
+        <a href="cultivate.html">...are you sure you want to remember?</a>
       </div>
       <center>
 
