--- a/new_project/ruined.html
+++ b/new_project/ruined.html
@@ -5,12 +5,14 @@
   </head>
   <body>
     <center>
-    <p><a href="lost.html">
-<img src="death.png" width="300" height="400">
-</a></p>
+    <div id="the">
+    <p> nostalgia for the <a href="WAKEUP.html">present moment</a></p>
+  </div>
+    <div id="moment">
+    <p> an <a href="lost.html">omen</a> for what is to come</p>
+  </div>
 
-<p hidden> You ever wonder about how we have a universal
-symbol of death? Wonder where that came from...wait it's from
-the plague doctors. Shut up. Mention this to no one. </p>
+<p hidden>
+ </p>
 
   <center>
