--- a/memories.html
+++ b/memories.html
@@ -4,3 +4,21 @@
   </head>
   <body>
     <center>
+  <video autoplay muted loop src="basil.mov" id="clouds"></video>
+  <div id="my">
+  <p> My grandmother always told me to learn the names
+    of the plants and flowers around me.</p>
+  </div>
+
+    <div id="face">
+  <p> If I was in an unfamiliar place,
+    <br>
+    but saw their <a href="familiar.html"><i>familiar
+    </i></a>face,</p>
+  </div>
+
+  <div id="alone">
+  <p>I wouldn't feel so <a href="alone.html"><i>alone</i></a></p>
+</div>
+
+<TITLE>familiar faces everywhere</TITLE>
