--- a/more.html
+++ b/more.html
@@ -6,11 +6,11 @@
     <center>
       <video autoplay muted loop src="whitenoise.mp4" id="glitch"></video>
       <div id="content">
-        <p>Changes in lunar behavior cause people to <a href="lunar"><i>lose touch with reality</i></a></p>
-        <p>and it becomes more difficult to blame our problems on monsters.</p>
+        <p>Changes in lunar behavior cause people to lose touch with reality</p>
+        <p>and it becomes more difficult to blame our problems on monsters</p>
       </div>
       <div id="memories">
-        <a href="memories.html">...are you sure you want to remember?</a>
+        <a href="cultivate.html">...are you sure you want to remember?</a>
       </div>
       <center>
 
