--- a/go.html
+++ b/go.html
@@ -17,6 +17,16 @@
       and over, and over, and over, and over, over, and over, and over, and over, and over, and over, and over, and over, and over, and over, and over, and over,
       and over, and over, and over, and over,over, and over, and over, and over, and over, and over, and over, and over, and over, and over, and over, and over,
       and over, and over, and over, and over, over, and over, and over, and over, and over, and over, and over, and over, and over, and over, and over, and over,
+      and over, and over, and over, and over, and over, and over, and over, and over, over, and over, and over, and over, and over, and over, and over, and over,
+      and over, and over, and over, and over,
+      and over, and over, and over, and over, over, and over, and over, and over, and over, and over, and over, and over, and over, and over, and over, and over,
+      and over, and over, and over, and over,over, and over, and over, and over, and over, and over, and over, and over, and over, and over, and over, and over,
+      and over, and over, and over, and over, over, and over, and over, and over, and over, and over, and over, and over, and over, and over, and over, and over,
+      and over, and over, and over, and over and over, and over, and over, and over, over, and over, and over, and over, and over, and over, and over, and over,
+      and over, and over, and over, and over,
+      and over, and over, and over, and over, over, and over, and over, and over, and over, and over, and over, and over, and over, and over, and over, and over,
+      and over, and over, and over, and over,over, and over, and over, and over, and over, and over, and over, and over, and over, and over, and over, and over,
+      and over, and over, and over, and over, over, and over, and over, and over, and over, and over, and over, and over, and over, and over, and over, and over,
       and over, and over, and over, and over</a>
     </div>
       <div id="stars">
@@ -29,10 +39,4 @@
     <TITLE>it's hard for all of us</TITLE>
 
 
-    <p hidden> Have you ever gone to a second-hand store and
-    they have a big box of old photos from who knows where and
-    who knows who took them? It's the strangest experience to go
-    through them for hours. You start to recognize these people
-    you've never known, see snippet of their lives. After a while
-    you'll get a headache. Whether that's from the concentration
-    or meeting all these new people, either way you feel groggy.</p>
+    
