--- a/growth.html
+++ b/growth.html
@@ -5,34 +5,20 @@
   </head>
   <body>
     <center>
+    <div id="enough">
+    <p><a href="essence.html">
+    they are dealing <br>with
+    enough <br>as is.</a></p>
+    </div>
+
   <div id="not">
-  <p>Please <b>DO NOT</b>
+    <div class="alert">
+    <span class="closebtn" onclick="this.parentElement.style.display='none';">&times;</span>
+    Please DO NOT
     <br>
-    <a href="cultivate.html">talk to the gardener,</a>
-    <br>
+    talk to the gardener,
+    </div>
   </div>
 
-<div id="enough">
-<p>
-they are dealing with
-<br>
-enough as is.</p>
-</div>
-
-  <div id="grow">
-  <p> It is not their duty
-    to grow for you,
-    <br>
-    your roots <a href="selfmade.html"><i>cannot</i></a> be made
-     by someone else</p>
-  </div>
-
-  <div id="flower">
-    <p> <a href="soak.html">soak up the sun</a> and
-      remember that
-      <br>
-      you alone
-      have the agency </p>
-  </div>
 
 <TITLE>the gardener</TITLE>
