--- a/index.html
+++ b/index.html
@@ -4,33 +4,17 @@
 
   </head>
   <body>
-    <center>
-    <h1>the inner sanctum</h1>
-    </center>
-    <div id="know">
-        <p>when we're old enough to remember the stars...</p>
-    </div>
-    <img src="home.jpg" height=500px width=1420px alt="an empty studio">
-    <div id="stars">
-      <p>will they want to know us?</p>
-    </div>
-      <p>we cannot afford them</p>
-      <div id="explore">
-        <p>you never know what you'll find if you snoop around...</p>
-      </div>
+<img src="stairs.jpg" height=1000px width=1200px alt="stairway leading somewhere">
+    <h1>when <br> we're old <br> enough to
+      <br>remember <br> the stars...</h1>
+    <p><b>will they want to know us?</b></p>
 
-      <p hidden> Look at you, smart cookie. Well now that
-        I've rewarded you you'll continue to do it. Fuck.
-        Forget that you saw this. </p>
+  <div id=out>
+  <a href="ohhello.html">going out?</a>
+</div>
 
-    <a href="ohhello.html">going out?</a>
-  <div id="move">
-    <a href="itssolovelyout.html">go back to sleep?</a>
-  </div>
-
-<center>
-  <div id="intro">
-  <a href="intro.html"><b>INTRODUCTION</b></a>
+<div id="move">
+  <a href="itssolovelyout.html">go back to sleep?</a>
 </div>
 
   </body>
