--- a/index2.html
+++ b/index2.html
@@ -1,29 +1,35 @@
 <html>
   <head>
-    <link rel="stylesheet" href="indexstyle.css"
+    <link rel="stylesheet" href="index2.css"
 
   </head>
-  <body>
-    <center>
-    <h1>the inner sanctum</h1>
-    </center>
-    <div id="know">
-        <p>remember the stars</p>
-    </div>
-    <img src="home.jpg" height=500px width=1420px alt="an empty studio">
-    <div id="stars">
-      <p>they do not care for us</p>
-    </div>
-      <p>things have changed...</p>
+  <html>
+    <head>
+      <link rel="stylesheet" href="indexstyle.css"
 
+    <body>
+  <img src="stairs.jpg" height=1000px width=1200px alt="stairway leading somewhere">
+      <h1>will they<br> want to<br>know us...</h1>
+      <p><b>unfortunately, we don't get to <a href="choose.html">choose.</a></b></p>
 
-    <a href="go.html">go.</a>
-  <div id="move">
-    <a href="video.html">go back to sleep?</a>
+    <div id=out>
+    <a href="go.html">do they care for us?</a>
   </div>
 
+  <div id="move">
+    <a href="video.html">join me under the stars?</a>
+  </div>
 
-  </body>
+    </body>
+
+  <TITLE>hello world</TITLE>
+  </html>
+
+  <p hidden> Ah see this is one of my favorite little tricks,
+  having the same page design but making it just slightly different.
+  God, I'm so good. </p>
+
+
 
 <TITLE>hello world</TITLE>
 </html>
