--- a/itssolovelyout.html
+++ b/itssolovelyout.html
@@ -6,13 +6,13 @@
   <body>
       <p>but it's so lovely out</p>
       <div id="dif">
-          <a href="index.html">here you are</a>
+          <a href="index.html">don't get too lost</a>
       </div>
       <div id="here">
-          <a href="index2.html">lets go back</a>
+          <a href="index2.html">it's getting late...</a>
       </div>
       <div id="fix">
-          <a href="home2.html">oh, this is new</a>
+          <a href="home2.html">do you know where you are?</a>
       </div>
       <p hidden> How many constellations do you know? I used to know quite a few,
         I learned them again to impress a boy and then forgot them when he forgot me. </p>
