--- a/ruined.html
+++ b/ruined.html
@@ -4,12 +4,13 @@
 
   </head>
   <body>
+    <img src="door.jpg" height=775px width=950px alt="door leading to a roof">
     <center>
     <div id="the">
     <p> nostalgia for the <a href="WAKEUP.html">present moment</a></p>
   </div>
     <div id="moment">
-    <p> an <a href="lost.html">omen</a> for what is to come</p>
+    <p> an <a href="lost.html">omen</a> for <br>what is to come</p>
   </div>
 
 <p hidden>
