--- a/video.html
+++ b/video.html
@@ -5,31 +5,17 @@
   </head>
   <body>
   <center>
-      <p>Oh, how'd you get here?
-        <br>
-        <br>
-      Well, that's alright. You're here now and I guess that's all that matters.
-        <br>
-      although I'm not sure if you can move forward from here...
-        <br>
-      It's okay to go <ins><a href="index.html">back</a></ins>
-      sometimes as long as you don't stay there for too long.
-        <br>
-      Thing's don't have to be <b><a href="https://www.thesaurus.com/browse/familiar" target="blank">familiar</a></b> to be safe.
-        <br>
-        <br>
-      The Sky is orange and you're thinking of <i>them</i>, aren't you?
-        <br>
-      It really is okay to be <b><a href="https://en.wikipedia.org/wiki/The_Thinker" target="blank">lost in thought</a></b>, just remember to
-      find your way back soon enough,
-        <br>
-      alright?
+    <p>I have an old video of an ex playing acoustic while I'm<br>
+      laying on my back staring into the clouds. <br> <br>
+      I can't quite remember why we were at a soccer field or <br> who else was with us,
+      but I <a href="essence.html">don't think that quite matters anymore.</a> <br> Don't even remember what
+      he was playing, <br> just the clouds and the cold grass. <br> <br>
 
+      We really weren't good for each other but <a href="alone.html">moments like <br>
+      that made me wish that we were.</a>
     </p>
  </center>
- <p hidden> Imagine that I'm playing a very calming acoustic guitar. I have an old video of an ex
- playing guitar while staring into the clouds. We weren't good for each other but moments like that made me wish
- that we were.</p>
+
 
   <TITLE>think you want to go back</TITLE>
   </html>
