--- a/home2.html
+++ b/home2.html
@@ -14,18 +14,13 @@
     </div>
     <center>
       <div id="wake">
-      <a href="WAKEUP.html">wake up?</a>
+      <a href="WAKEUP.html">go back?</a>
     </div>
     <div id="explore">
       <p>it's okay to be frightened</p>
     </div>
     </center>
   </center>
-
-  <p hidden> Imagine that I'm playing a very calming acoustic guitar. I have an old video of an ex
-  playing guitar while staring into the clouds. We weren't good for each other but moments like that made me wish
-  that we were.</p>
-
 
   </body>
 <TITLE>thats not right...</TITLE>
