--- a/soak.html
+++ b/soak.html
@@ -5,8 +5,13 @@
   </head>
   <body>
     <center>
+  <div id="plastic">
+ <p> <a href="essence.html">all of the things I miss <br> about you I am cultivating
+   <br> in myself</a></p>
+ </div>
 
-  <div class="alert">
-  <span class="closebtn" onclick="this.parentElement.style.display='none';">&times;</span>
-  giving away pieces of myself and cultivating what is left
-</div>
+ <div id="block">
+   <p><a href="essence.html"> I am cultivating myself</a></p>
+ </div>
+
+<TITLE>roots are still growing</TITLE>
