--- a/selfmade.html
+++ b/selfmade.html
@@ -14,6 +14,6 @@
     And I don't know if thats a bad thing or not. <br>
     I've been sad, been heartbroken, I've been<br>
     losing <a href="loss.html">all the things I used to care the most about</a>.<br>
-    <br> <br> <br><a href="take.html">I need to cry for a while.</a></p>
+    <br> <br> <br><a href="mixed.html">I need to cry for a while.</a></p>
 
     <TITLE>mundane magic</TITLE>
