--- a/index.html
+++ b/index.html
@@ -1,28 +1,23 @@
 <html>
   <head>
-    <center>
-    <link rel="stylesheet" href="index.css">
-    <h1> <br>  TABLE OF CONTENT(<a href=".html">S</a>) </h1>
+    <link rel="stylesheet" href="indexstyle.css"
+
   </head>
-
   <body>
-    <div id="wrapper"> ... all your body content </div>
-    <div id="twentytwo">
-    <p> <b>2022</b><br>
-    <a href="sept22.html">SEPTEMBER </a><br>
-    <a href="oct22.html">OCTOBER </a><br>
-    <a href="nov22.html">NOVEMBER </a><br>
-    <a href="dec22.html">DECEMBER </a>
-    <br>
-    <br>
-    <br>
-    <b>2023</b>
-  </div>
+<img src="stairs.jpg" height=1000px width=1200px alt="stairway leading somewhere">
+    <h1>when <br> we're old <br> enough to
+      <br>remember <br> the stars...</h1>
+    <p><b>will they want to know us?</b></p>
 
+  <div id=out>
+  <a href="ohhello.html">going out?</a>
+</div>
 
+<div id="move">
+  <a href="itssolovelyout.html">go back to sleep?</a>
+</div>
 
+  </body>
 
-      <p>
-
-
-<TITLE>TABLE OF CONTENTS</TITLE>
+<TITLE>hello world</TITLE>
+</html>
