--- a/take.html
+++ b/take.html
@@ -1,11 +1,10 @@
 <html>
 <head>
-  <link rel="stylesheet" href="ess.css"
+  <link rel="stylesheet" href="take.css"
 </head>
 <body>
     <center>
-     <a href="selfmade.html"></a>
-
+     <a href="selfmade.html"><video autoplay muted loop src="green.mp4" id="clouds"></video></a>
 
       <div id="best">
         <a href="soak.html">
